--- a/GameJam2017Spring.CSharp.csproj
+++ b/GameJam2017Spring.CSharp.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Resources\Scripts\BoardManager.cs" />
+    <Compile Include="Assets\Resources\Scripts\TileWrapper.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_GazeTracker.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_LaserPointer.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_Teleporter.cs" />
